# py_tactris

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  figures.py  main.py  pyproject.toml
py_tactris/: block.py  core.py  figures.py  grid.py  main.py  shapes.py  sidebar.py
py_tactris/modules/: __init__.py  actions.py  block.py  grid.py  shape_choice.py  top_info.py
py_tactris/utlis/: __init__.py  matrix.py  stack.py
