[tool.poetry]
name = "py_tactris"
version = "0.1.0"
description = "Tactris implementation in python"
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
