[tool.poetry]
name = "py_tactris"
version = "0.1.0"
description = "Tactris implementation in python"
authors = ["Vladimir Vyazovetskov <erhosen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
